k8s/k8s-observabilidade/observabilidade-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: observabilidade-lb
  namespace: observabilidade
spec:
  type: LoadBalancer
  selector:
    app: grafana  
  ports:
    - name: grafana
      port: 3000
      targetPort: 3000
    - name: prometheus
      port: 9090
      targetPort: 9090
