k8s/k8s-observabilidade/observabilidade-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: observabilidade-ingress
  namespace: observabilidade
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana-svc
            port:
              number: 3000
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-svc
            port:
              number: 9090
